[project]
name = "dolphin"
version = "1.5.0"
description = "Document Image Parsing via Heterogeneous Anchor Prompting"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26.4,<2.0",
    "omegaconf==2.3.0",
    "opencv-python>=4.8.0,<4.11",
    "opencv-python-headless>=4.5.5,<4.6",
    "pillow>=9.3.0",
    "timm==0.5.4",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers==4.47.0",
    "accelerate==1.6.0",
    "pymupdf==1.26",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
